[package]
name = "rust-dap-bluepill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dap = { path = ".." }
panic-halt = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
usb-device = { version = "0.2", features = ["control-buffer-256"]}
usbd-serial = "0.1"
nb = "0.1"
heapless = "0.7"
embedded-hal = "0.2"

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]
